[gd_scene load_steps=2 format=3 uid="uid://d0qccbqd48cy2"]

[ext_resource type="Script" uid="uid://d2nwufa0k4f2y" path="res://scripts/popup.gd" id="1_4ebxx"]

[node name="Popup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_4ebxx")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.196078)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleBar" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Panel/TitleBar"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
text = "111"

[node name="CloseButton" type="Button" parent="Panel/TitleBar"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "x"

[node name="Content" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 36.0
offset_right = -24.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
autowrap_mode = 1

[node name="ButtonContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0

[node name="ConfirmButton" type="Button" parent="Panel/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "чбошод"

[connection signal="pressed" from="Panel/TitleBar/CloseButton" to="." method="hide_popup"]
[connection signal="pressed" from="Panel/ButtonContainer/ConfirmButton" to="." method="hide_popup"]
